Adding changes made to About page, logo, contact

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <!-- Logo -->
         <div class="container">
             <a class="logo-link" href="index.html">
-                <img class="img-responsive logo" src="./images/Logo.jpg" alt="Logo">
+                <img class="img-responsive logo img-fluid" src="./images/Logo.jpg" alt="Logo">
             </a>
             <hr class="line" />
         </div>
@@ -96,10 +96,10 @@
                             <i class="fas fa-phone-square-alt fa-3x faIcons"></i>
                             <h6 class="contactHeaders">PHONE NUMBER</h6>
                             <p class="contactpara">
-                                <a class="phone contactDetails" href="tel:04844066548">0484-4066548</a>
+                                <a class="phone contactDetails number" href="tel:04843513883">0484-351-3883</a>
                             </p>
                             <p class="contactpara">
-                                <a class="phone contactDetails" href="tel:+919840211144">9840211144</a>
+                                <a class="phone contactDetails number" href="tel:+919840211144">9840211144</a>
                             </p>
                         </div>
                         <div class="col-12 col-md-4 contact-group contact-group-two">
