--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Logo -->
         <div class="container">
             <a class="logo-link" href="index.html">
-                <img class="img-responsive logo" src="./images/Logo.jpg" alt="Logo">
+                <img class="img-responsive logo img-fluid" src="./images/Logo.jpg" alt="Logo">
             </a>
             <hr class="line" />
         </div>
@@ -144,7 +144,7 @@
                 <hr class="products-hr" />
                 <h3 class="intro-header">CYBERKING TECHNOLOGIES PRIVATE LIMITED</h3>
                 <hr class="products-hr" />
-                <p class="intro-para">We are dealers in all types of paper, stationery, computer consumables & printers. We are the largest commercial partner of Printers as well as Cartridges for HP and Canon and our prime customers are leading Private and Government Organizations throughout South India.</p>
+                <p class="intro-para">We are dealers in all types of computer consumables & printers. We are the largest commercial partner of Printers as well as Cartridges for HP and Canon and our prime customers are leading Private and Government Organizations throughout South India.</p>
             </div>
         </div>
 
@@ -170,15 +170,15 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 individual-product">
-                    <img class="product-image img-fluid" src="./images/MPS.jpg" alt="MPS">
+                    <img class="product-image img-fluid" src="./images/Computers.jpg" alt="Computers">
                     <div class="product-contents white-overlay-products white-overlay-mps">
-                        <h6 class="product-heading">MANAGED PRINT SERVICES</h6>
+                        <h6 class="product-heading">COMPUTERS</h6>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 individual-product">
                     <img class="product-image img-fluid" src="./images/IT_Accessories.jpg" alt="IT Accessories">
                     <div class="product-contents white-overlay-products white-overlay-it-accessories">
-                        <h6 class="product-heading">IT ACCESSORIES</h6>
+                        <h6 class="product-heading">ACCESSORIES</h6>
                     </div>
                 </div>
             </div>
@@ -280,10 +280,10 @@
                         <i class="fas fa-phone-square-alt fa-2x faIcons"></i>
                         <h6 class="contactHeaders">Phone Number</h6>
                         <p class="contactpara">
-                            <a class="phone contactDetails" href="tel:04844066548">0484-4066548</a>
+                            <a class="phone contactDetails number" href="tel:04843513883">0484-351-3883</a>
                         </p>
                         <p class="contactpara">
-                            <a class="phone contactDetails" href="tel:+919840211144">9840211144</a>
+                            <a class="phone contactDetails number" href="tel:+919840211144">9840211144</a>
                         </p>
                     </div>
                     <div class="col-12 col-md-6 contact-group contact-group-two">
