--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <!-- Logo -->
         <div class="container">
             <a class="logo-link" href="index.html">
-                <img class="img-responsive logo" src="./images/Logo.jpg" alt="Logo">
+                <img class="img-responsive logo img-fluid" src="./images/Logo.jpg" alt="Logo">
             </a>
             <hr class="line" />
         </div>
@@ -91,30 +91,10 @@
                 <div class="black-overlay">
                     <div class="about-contents">
                         <h3 class="about-header">ABOUT CYBERKING TECHNOLOGIES PRIVATE LIMITED</h3>
-                        <p class="about-para">Cyberking Technologies Private Limited was started in 2002 by Mr. Narasimhan who is running the ancestral family stationery business (Est. 1947). We further expanded our horizons as Office Suppliers for all types of Stationery, Papers, Printers, and Computer Consumables.</p>
-                        <p class="about-para">Our prime customers are leading Private and Government Organizations throughout South India. We are one of the largest commercial partner of Printers as well as cartridges for HP and Canon. Even more, we are authorized dealers for supplying products in Gem Marketplace and have executed multiple orders across India.</p>
-                        <p class="about-para">Our organization consists of passionate and inspired professionals with the commitment to achieve excellence, customer satisfaction, and provide the best possible solution. We are completing our 20th year with the continued patronage of our valued customers with a sales of INR 35 Crores.</p>
-                        <p>GSTIN : 32AACCC0007G1ZK</p>
-                        <p>CIN : U72200KL2001PTC015043</p>
-
-                        <h5 class="achievements-header">OUR ACHIEVEMENTS</h5>
-                        <ul class="achievements-list">
-                            <li class="achievements">
-                                Awarded as the BEST COMMERCIAL PARTNER METRO for India in HP Supplies Leadership Summit 2018, held in Switzerland.
-                            </li>
-                            <li class="achievements">
-                                Received Performance Excellence Award for India in CANON office supplies CARTRIDGE RESELLER ACHIEVER’S LEAGUE 2019.
-                            </li>
-                            <li class="achievements">
-                                Awarded as the BEST SSP PARTNER IN METRO for India in HP CHASE PARTNER MEET 2015, held in Barcelona.
-                            </li>
-                            <li class="achievements">
-                                Awarded as the BEST COMMERCIAL PARTNER/CFS for India in CANON Office Supplies RESELLER LASER CONSUMABLES Summit 2018, held in Paris.
-                            </li>
-                            <li class="achievements">
-                                Awarded as the BEST COMMERCIAL/MVC PERFORMANCE for India in HP Office Supplies Leadership Summit 2014, held in Vietnam.
-                            </li>
-                        </ul>
+                        <p class="about-para">Cyberking Technologies Private Limited are Office Suppliers of Printers and Computer Consumables, with leading Private and Government Organizations throughout South India, as prime customers. We are one of the largest commercial partner of Printers as well as cartridges for HP and Canon. Even more, we are authorized dealers for supplying products in Gem Marketplace and have executed multiple orders across India.</p>
+                        <p class="about-para">Our organization consists of passionate and inspired professionals with the commitment to achieve excellence, customer satisfaction, and provide the best possible solution. We are completing our 20th year with the continued patronage of our valued customers.</p>
+                        <p class="about-para number">GSTIN : 32AACCC0007G1ZK</p>
+                        <p class="about-para number">CIN : U72200KL2001PTC015043</p>
                     </div>
                 </div>
             </div>
@@ -239,10 +219,10 @@
                         <i class="fas fa-phone-square-alt fa-2x faIcons"></i>
                         <h6 class="contactHeaders">Phone Number</h6>
                         <p class="contactpara">
-                            <a class="phone contactDetails" href="tel:04844066548">0484-4066548</a>
+                            <a class="phone contactDetails number" href="tel:04843513883">0484-351-3883</a>
                         </p>
                         <p class="contactpara">
-                            <a class="phone contactDetails" href="tel:+919840211144">9840211144</a>
+                            <a class="phone contactDetails number" href="tel:+919840211144">9840211144</a>
                         </p>
                     </div>
                     <div class="col-12 col-md-6 contact-group contact-group-two">
