Adding changes made to the About Page, Contact, products & logo

--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                                 <i class="fas fa-users fa-3x fa-icon"></i>
                                 <div class="col">
                                     <h6 class="each-key-attribute-header">WORKFORCE</h6>
-                                    <p class="each-key-attribute-description">Largest Office Suppliers in Chennai with 4000 sq. ft. of operations and a workforce of 50 employees at your service</p>
+                                    <p class="each-key-attribute-description">Largest Office Suppliers in South India with 4000 sq. ft. of operations and a workforce of 50 employees at your service</p>
                                 </div>
                             </div>
                         </div>
