--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
             <div class="products-description mps-product-description">
                 <div class="descriptions">
                     <div class="each-product-div">
-                        <h5 class="each-product-heading text-center">MANAGED PRINT SERVICES</h5>
-                        <p class="each-product-description mps-description">We offer Managed Print Solutions, which is the efficient management of printing & imaging devices like printers, copiers, fax machines and multi-function devices.</p>
+                        <h5 class="each-product-heading text-center">COMPUTERS</h5>
+                        <p class="each-product-description mps-description">We offer different types of computers like laptops, desktops, all-in-ones, for sale.</p>
                     </div>
                 </div>
             </div>
